alb-ingress/otel-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pub-alb-ingress
  namespace: otel-demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: pub-alb-ingress
    alb.ingress.kubernetes.io/group.name: pub-alb-ingress
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:224113960740:certificate/9dc22c91-1440-46b8-bea7-e902c7b9b2e5"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: gitops.jjikin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-demo-frontendproxy
            port:
              number: 8080
